# GTRP-Launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
assets/: ProperShaders-GTRP.ini  base-game-integrity.json  enb-source.json  hd-paths.txt  proper-shaders-source.json  reshade-source.json
assets/ENB-GTRP/: enblocal.ini  enbseries.ini
assets/ReShade-GTRP/: GTRP-HD.ini  ReShade.ini
mods-src/: README.md
scripts/: assemble-graphics-modpack.sh  build-integrity-policy.py  generate-base-integrity.mjs  lower-frames-z.py  lower-vehicle-body.py  patch-dff-samp.py  publish-config.sh  publish-modpack.sh  publish-patch.sh  sign-manifest.py  test_manifest_signing.py  verify-integrity-policy.py
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml  build.rs
src-tauri/core/examples/: query.rs  sync_cache.rs
src-tauri/core/src/: config.rs  enb.rs  error.rs  gta.rs  laa.rs  launch.rs  launcher_gate.rs  lib.rs  news.rs  query.rs  runtime_guard.rs  samp_cache.rs  settings.rs  updater.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tools/: gen-manifest.mjs  prepare-enb-pack.mjs
