[package]
name = "gtrp-launcher"
version = "0.1.4"
description = "Launcher officiel du serveur GTRP (Grand Theft RolePlay) - SA-MP"
authors = ["GTRP"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[workspace]
members = ["core"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
gtrp-core = { path = "core" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
