[package]
name = "gtrp-core"
version = "0.1.7"
edition = "2021"
description = "Logique métier du launcher GTRP (query SA-MP, updater, détection du jeu). Sans dépendance GUI, testable partout."

[lib]
name = "gtrp_core"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
