[package]
name = "gtrp-core"
version = "0.1.19"
edition = "2021"
description = "Logique métier du launcher GTRP (query SA-MP, updater, détection du jeu). Sans dépendance GUI, testable partout."

[lib]
name = "gtrp_core"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
notify = "6.1"
hmac = "0.12"
rand = "0.8"
crc32fast = "1"
thiserror = "1"
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
